--- a/YoutubeOnTV/YoutubeOnTV.csproj
+++ b/YoutubeOnTV/YoutubeOnTV.csproj
@@ -71,6 +71,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="UnityEngine.Modules" Version="2021.3.33" IncludeAssets="compile" />
+    <PackageReference Include="Xilophor.LethalNetworkAPI">
+      <Version>3.3.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
