--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "name": "YoutubeOnTV",
-  "version_number": "0.2.3",
+  "version_number": "0.2.4",
   "website_url": "https://github.com/roandegraaf/YoutubeOnTV",
   "description": "Watch YouTube videos on in-game TVs! Adds terminal commands to control video playback on ship TVs. Synced for all players.",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
     "NotAtomicBomb-TerminalApi-1.5.5",
     "Lordfirespeed-YoutubeDLSharp-1.1.0",
-    "FlipMods-ObjectVolumeController-1.1.2"
+    "FlipMods-ObjectVolumeController-1.1.2",
+    "xilophor-LethalNetworkAPI-3.3.2"
   ]
 }
